# notisync-server

./: .env  Cargo.toml  docker-compose.dev.yml  rustfmt.toml
migrations/2023-12-20-164530_user/: up.sql
src/: main.rs  schema.rs
src/models/: mod.rs
src/services/: mod.rs  user.rs
